# mbtamap

./: README.md  main.py  pyproject.toml
data/: mappoints.json  stops.json
mbta_api/: pyproject.toml
mbta_api/mbta_api/: __init__.py  api.py  api_config.py  world.py
scripts/: generate_id_map.py
src/mbta_api/: pyproject.toml
src/mbta_api/mbta_api/: __init__.py  api.py  base_map.py  controllers.py  mappoint.py  world.py
src/simulator/: pyproject.toml
src/simulator/simulator/: __init__.py  tk_map.py
tests/: test_local_data.py
